--- a/app/src/main/res/layout/fragment_sidebar.xml
+++ b/app/src/main/res/layout/fragment_sidebar.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cl_sidebar"
+    android:id="@+id/cl_sidebar_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4D000000">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nsv_sidebar"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_sidebar"
         android:layout_width="270dp"
         android:layout_height="0dp"
         android:background="@color/grayWhite"
@@ -15,171 +15,165 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/iv_sidebar_close"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/icon_close"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_sidebar_group_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="27dp"
+            android:fontFamily="@font/pretendard_bold"
+            android:textColor="@color/grayBlack"
+            android:textSize="26sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_sidebar_close" />
+
+        <ImageView
+            android:id="@+id/iv_sidebar_group_name_edit"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/icon_edit_gray"
+            app:layout_constraintBottom_toBottomOf="@id/tv_sidebar_group_name"
+            app:layout_constraintStart_toEndOf="@id/tv_sidebar_group_name"
+            app:layout_constraintTop_toTopOf="@id/tv_sidebar_group_name" />
+
+        <ImageView
+            android:id="@+id/iv_sidebar_people"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginTop="4dp"
+            android:src="@drawable/icon_people"
+            app:layout_constraintStart_toStartOf="@id/tv_sidebar_group_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_sidebar_group_name" />
+
+        <TextView
+            android:id="@+id/tv_sidebar_group_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:fontFamily="@font/pretendard_medium"
+            android:text="n명"
+            android:textColor="@color/gray500"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_sidebar_people"
+            app:layout_constraintStart_toEndOf="@id/iv_sidebar_people"
+            app:layout_constraintTop_toTopOf="@id/iv_sidebar_people" />
+
+        <LinearLayout
+            android:id="@+id/ll_sidebar_invite_code"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:background="@color/mainsub2"
+            android:orientation="horizontal"
+            android:paddingVertical="13dp"
+            android:paddingStart="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_sidebar_people">
 
             <ImageView
-                android:id="@+id/iv_sidebar_close"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginRight="20dp"
-                android:src="@drawable/icon_close"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:src="@drawable/icon_ticket" />
 
             <TextView
-                android:id="@+id/tv_sidebar_group_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="27dp"
-                android:fontFamily="@font/pretendard_bold"
-                android:textColor="@color/grayBlack"
-                android:textSize="26sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_sidebar_close" />
-
-            <ImageView
-                android:id="@+id/iv_sidebar_group_name_edit"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginStart="8dp"
-                android:src="@drawable/icon_edit_gray"
-                app:layout_constraintBottom_toBottomOf="@id/tv_sidebar_group_name"
-                app:layout_constraintStart_toEndOf="@id/tv_sidebar_group_name"
-                app:layout_constraintTop_toTopOf="@id/tv_sidebar_group_name" />
-
-            <ImageView
-                android:id="@+id/iv_sidebar_people"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_marginTop="4dp"
-                android:src="@drawable/icon_people"
-                app:layout_constraintStart_toStartOf="@id/tv_sidebar_group_name"
-                app:layout_constraintTop_toBottomOf="@id/tv_sidebar_group_name" />
-
-            <TextView
-                android:id="@+id/tv_sidebar_group_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginLeft="6dp"
                 android:fontFamily="@font/pretendard_medium"
-                android:text="n명"
-                android:textColor="@color/gray500"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/iv_sidebar_people"
-                app:layout_constraintStart_toEndOf="@id/iv_sidebar_people"
-                app:layout_constraintTop_toTopOf="@id/iv_sidebar_people" />
+                android:text="@string/invite_code_issue"
+                android:textColor="@color/texthigh"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_sidebar_plan_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/pretendard_medium"
+            android:text="@string/plan"
+            android:textColor="@color/purpleMain"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll_sidebar_invite_code" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_sidebar_plan_title">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray100" />
 
             <LinearLayout
-                android:id="@+id/ll_sidebar_invite_code"
+                android:id="@+id/ll_sidebar_waiting_plan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
-                android:background="@color/mainsub2"
                 android:orientation="horizontal"
-                android:paddingVertical="13dp"
-                android:paddingStart="18dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_sidebar_people">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/icon_ticket" />
+                android:paddingVertical="13dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
+                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/pretendard_medium"
-                    android:text="@string/invite_code_issue"
-                    android:textColor="@color/texthigh"
+                    android:text="@string/waiting_plan"
+                    android:textColor="@color/gray800"
                     android:textSize="16sp" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_sidebar_plan_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="17dp"
-                android:layout_marginTop="30dp"
-                android:fontFamily="@font/pretendard_medium"
-                android:text="@string/plan"
-                android:textColor="@color/purpleMain"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ll_sidebar_invite_code" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray100" />
 
             <LinearLayout
+                android:id="@+id/ll_sidebar_plan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:orientation="vertical"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_sidebar_plan_title">
+                android:orientation="horizontal"
+                android:paddingVertical="13dp">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/gray100" />
-
-                <LinearLayout
-                    android:id="@+id/ll_sidebar_waiting_plan"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingVertical="13dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:fontFamily="@font/pretendard_medium"
-                        android:text="@string/waiting_plan"
-                        android:textColor="@color/gray800"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/gray100" />
-
-                <LinearLayout
-                    android:id="@+id/ll_sidebar_plan"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingVertical="13dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:fontFamily="@font/pretendard_medium"
-                        android:text="@string/plan"
-                        android:textColor="@color/gray800"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/gray100" />
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:text="@string/plan"
+                    android:textColor="@color/gray800"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray100" />
 
-    </androidx.core.widget.NestedScrollView>
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/cl_sidebar_menu"
@@ -190,9 +184,9 @@
         android:orientation="vertical"
         android:paddingBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/nsv_sidebar"
-        app:layout_constraintStart_toStartOf="@id/nsv_sidebar"
-        app:layout_constraintTop_toBottomOf="@id/nsv_sidebar">
+        app:layout_constraintEnd_toEndOf="@id/cl_sidebar"
+        app:layout_constraintStart_toStartOf="@id/cl_sidebar"
+        app:layout_constraintTop_toBottomOf="@id/cl_sidebar">
 
         <View
             android:layout_width="match_parent"
