--- a/app/src/main/res/layout/dialog_fix_plan.xml
+++ b/app/src/main/res/layout/dialog_fix_plan.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/tv_dialog_fix_date"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:text="2023년 7월 3일 월요일"
@@ -41,22 +41,22 @@
                 android:textSize="18sp"
                 android:textColor="@color/gray800"
                 android:layout_marginTop="6dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_date"
-                app:layout_constraintStart_toStartOf="@id/tv_date"
-                app:layout_constraintEnd_toEndOf="@id/tv_date"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_dialog_fix_date"
+                app:layout_constraintStart_toStartOf="@id/tv_dialog_fix_date"
+                app:layout_constraintEnd_toEndOf="@id/tv_dialog_fix_date"/>
 
             <TextView
-                android:id="@+id/tv_participants"
+                android:id="@+id/tv_dialog_fix_participants"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
-                android:text="이안진, 김미보, 김채린, 정아현"
+                android:text=""
                 android:layout_marginTop="14dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_time"/>
 
             <TextView
-                android:id="@+id/tv_text"
+                android:id="@+id/tv_dialog_fix_text"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
                 android:text="약속을 확정하시겠습니까?"
@@ -64,7 +64,7 @@
                 android:textSize="18sp"
                 android:textColor="@color/gray800"
                 android:layout_marginTop="45dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_participants"
+                app:layout_constraintTop_toBottomOf="@id/tv_dialog_fix_participants"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -74,10 +74,10 @@
                 android:layout_height="1dp"
                 android:background="@color/gray100"
                 android:layout_marginTop="49dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_text"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_dialog_fix_text"/>
 
             <TextView
-                android:id="@+id/tv_cancel"
+                android:id="@+id/tv_dialog_fix_cancel"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:text="취소"
@@ -91,7 +91,7 @@
                 app:layout_constraintStart_toStartOf="parent"/>
 
             <TextView
-                android:id="@+id/tv_confirm"
+                android:id="@+id/tv_dialog_fix_confirm"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:text="확정"
