--- a/app/src/main/res/layout/item_todolist.xml
+++ b/app/src/main/res/layout/item_todolist.xml
@@ -1,72 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_cl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="24dp"
+    android:layout_marginVertical="5dp"
     android:background="@drawable/layout_todolist"
-    android:padding="20dp"
-    android:layout_marginHorizontal="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginTop="1dp"
     android:elevation="8dp"
-    android:id="@+id/item_cl">
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_promisstime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="14:00"
-        android:textSize="16sp"
-        android:textColor="@color/gray800"
         android:fontFamily="@font/pretendard_medium"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:text="14:00"
+        android:textColor="@color/texthigh"
+        android:textSize="16sp" />
 
     <View
-        android:id="@+id/v_promiss"
         android:layout_width="1dp"
-        android:layout_height="42dp"
-        android:background="#C1C1C1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/tv_promisstime"
+        android:layout_height="26dp"
         android:layout_marginHorizontal="20dp"
-        />
+        android:background="@color/iconDisabled" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/v_promiss">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_promisscontent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginLeft="20dp"
-            android:fontFamily="@font/pretendard_bold"
-            android:textColor="@color/black"
-            android:textSize="16sp"
             android:breakStrategy="simple"
-            android:text="2차 스터디"/>
+            android:ellipsize="end"
+            android:fontFamily="@font/pretendard_bold"
+            android:gravity="center_vertical"
+            android:maxWidth="183dp"
+            android:maxLines="1"
+            android:text="2차 스터디"
+            android:textColor="@color/texthigh"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_promisscategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_promisscontent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="14sp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
             android:fontFamily="@font/pretendard_medium"
-            android:text="ios 스터디"/>
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:text="ios 스터디"
+            android:textColor="@color/textMedium"
+            android:textSize="14sp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
