--- a/app/src/main/res/layout/item_cofirmlist.xml
+++ b/app/src/main/res/layout/item_cofirmlist.xml
@@ -1,112 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/plan_cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    android:background="@android:color/transparent"
+    android:layout_margin="5dp"
     android:elevation="1dp"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="2dp"
-    android:layout_marginBottom="10dp"
-    android:paddingVertical="5dp"
-    android:id="@+id/plan_cv">
+    app:cardCornerRadius="10dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
         android:padding="20dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_dateset"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:fontFamily="@font/pretendard_bold"
-                android:textSize="14sp"
-                android:textColor="@color/gray800"
-                android:text="2023.04.30"/>
+                android:paddingVertical="1dp"
+                android:text="2023. 04. 30"
+                android:textColor="@color/texthigh"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/tv_date"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/pretendard_bold"
-                android:textSize="14sp"
-                android:textColor="@color/gray800"
-                android:text="14:00"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:paddingVertical="1dp"
+                android:text="14:00"
+                android:textColor="@color/texthigh"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
         <View
-            android:id="@+id/line"
             android:layout_width="1dp"
             android:layout_height="26dp"
-            app:layout_constraintLeft_toRightOf="@id/cl_dateset"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginHorizontal="20dp"
-            android:background="@color/gray200"/>
+            android:background="@color/iconDisabled" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_infoconfirm"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toRightOf="@id/line"
-            android:layout_marginLeft="20dp">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_remaindate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
                 android:fontFamily="@font/pretendard_medium"
-                android:textSize="14sp"
-                android:textColor="@color/gray500"
+                android:paddingVertical="2dp"
                 android:text="n일 남았습니다."
-                android:visibility="gone"/>
+                android:textColor="@color/textMedium"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tv_promisename"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/tv_remaindate"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:fontFamily="@font/pretendard_medium"
-                android:textSize="16sp"
-                android:textColor="@color/gray800"
+                android:layout_marginTop="4dp"
                 android:breakStrategy="simple"
-                android:text="제목"/>
+                android:ellipsize="end"
+                android:fontFamily="@font/pretendard_medium"
+                android:lineHeight="24dp"
+                android:maxLines="2"
+                android:paddingVertical="2dp"
+                android:text="제목은 최대 두 줄, 더 길어지면 말 줄임표를 사용 제목은 최대 두 줄, 더 길어지면 말 줄임표를 사용"
+                android:textColor="@color/gray800"
+                android:textSize="16sp" />
 
+        </LinearLayout>
 
+    </LinearLayout>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <ImageView
-            android:id="@+id/iv_history_mark"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:padding="4dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:elevation="1dp"
-            android:background="@drawable/cardview_history"
-            android:src="@drawable/archive"
-            android:visibility="gone"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
